--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -23,6 +23,9 @@
                 <p style="font-size:18px;">Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
 à la fois intime et convivial, avec des équipements de
 haut standing et un niveau de confort sans pareil.</p>
+
+                <p style="font-size:18px;"> Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
+
                 <%= link_to "Nous contacter", root_path(anchor: 'contact'), class: "btn-get-started" %>
                 <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers " %>
               </div>
@@ -44,6 +47,9 @@ haut standing et un niveau de confort sans pareil.</p>
                 <p style="font-size:18px;" >Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
 à la fois intime et convivial, avec des équipements de
 haut standing et un niveau de confort sans pareil.</p>
+
+                <p style="font-size:18px;"> Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
+
                 <%= link_to "Nous contacter", root_path(anchor: 'contact'), class: "btn-get-started " %>
                 <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers " %>
               </div>
@@ -65,6 +71,9 @@ haut standing et un niveau de confort sans pareil.</p>
                 <p style="font-size:18px;" >Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
 à la fois intime et convivial, avec des équipements de
 haut standing et un niveau de confort sans pareil.</p>
+
+                <p style="font-size:18px;"> Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
+
                 <%= link_to "Nous contacter", root_path(anchor: 'contact'), class: "btn-get-started" %>
                 <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers" %>
               </div>
@@ -367,6 +376,9 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
           <h2 class="mb-4 pb-4">Devenir Propriétaire</h2>
 
           <p class="p-font2">
+            Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
+
+          <p class="p-font2">
             Nous vous offrons la <strong>possibilité d’acquérir une chambre
           ou une suite</strong>, meublée au sein d’une <strong>résidence à vocation
           touristique</strong> permettant à votre gestionnaire d’<strong>organiser la
@@ -417,6 +429,11 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
           <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers animate__animated animate__fadeInUp scrollto" %>
           </div>
 
+          <p class="p-font4 mb-4 pb-4">
+            *Rentabilité donnée à titre indicatif et sous conditions. La location sous le régime de la parahôtellerie nécessite la mise en œuvre d’au moins trois des prestations suivantes : fourniture du petit-déjeuner, nettoyage régulier des locaux, fourniture du linge de maison, réception de la clientèle. Elle permet la récupération intégrale de la TVA (20%) payée lors de l’acquisition du bien, sous condition d’engagement de location. Comme tout investissement, investir dans l’immobilier peut présenter des risques.
+          </P>
+
+
       </DIV>
 
     </div>
@@ -434,11 +451,11 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
           <div class="col-lg-6 pt-4" data-aos="fade-up" >
 
               <h3><i class="fas fa-phone pr-4 pb-4"></i> Appelez-nous</h3>
-              <p>04 67 57 11 26</p>
+              <p style="font-size:28px;">04 67 57 11 26</p>
 
               <p class="p-font3 pr-4 mr-4 pt-4 mt-4">Vous êtes intéressé par <strong>Vibes Resort</strong> ? Vous souhaitez obtenir davantage d'informations sur notre résidence ? <strong>Remplissez le formulaire suivant, nous vous recontacterons</strong> !</p>
 
-              <p class="p-font4 pr-4 mr-4 pt-4 mt-4"><i> *En soumettant ce formulaire, vous acceptez que vos données personnelles soient utilisées pour vous contacter dans le cadre de votre demande indiquée dans ce formulaire. Aucun autre traitement ne sera effectué avec vos informations.</i></p>
+
           </div>
 
 
@@ -496,6 +513,7 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
                 </div>
                 <div class="col-md-12">
                   <p class="p-font4">*Champs obligatoires</p>
+                  <p class="p-font4 "><i> En soumettant ce formulaire, vous acceptez que vos données personnelles soient utilisées pour vous contacter dans le cadre de votre demande indiquée dans ce formulaire. Aucun autre traitement ne sera effectué avec vos informations.</i></p>
                 </div>
               </div>
             </div>
