--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -110,7 +110,7 @@ haut standing et un niveau de confort sans pareil.</p>
 
           <div class="col-xs-12 col-sm-12 col-lg-4 col-md-4 d-none d-lg-block text-center ">
 
-            <%=image_tag("logo-min.webp", :style =>'width:40%;', :alt => 'vibes-resort-logo')%>
+            <%=image_tag("logo-min2.png", :style =>'width:88%;', :alt => 'vibes-resort-logo')%>
 
           </div>
 
@@ -259,7 +259,7 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
         </ol>
         <div class="carousel-inner" >
           <div class="carousel-item active">
-            <%=image_tag("vibes-resort-3.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
+            <%=image_tag("vibes-resort-terrasse-2.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
           </div>
           <div class="carousel-item">
             <%=image_tag("pool.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
@@ -305,18 +305,18 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
                   <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
                 </ol>
                 <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <%=image_tag("chambre-HD2.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
+                  </div>
+                  <div class="carousel-item">
+                  <%=image_tag("vibes-resort-chambre.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
+                </div>
                     <div class="carousel-item">
                       <%=image_tag("vibes-resort-appartement-3.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
                     </div>
                     <div class="carousel-item">
-                      <%=image_tag("vibes-resort-terrasse-2.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
-                    </div>
-                    <div class="carousel-item">
                       <%=image_tag("vibes-resort-appartement-2.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
                     </div>
-                  <div class="carousel-item">
-                  <%=image_tag("vibes-resort-chambre.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
-                </div>
                 <div class="carousel-item">
                 <%=image_tag("vibes-resort-chambre2.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
               </div>
@@ -325,9 +325,6 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
             </div>
                   <div class="carousel-item">
                     <%=image_tag("vibes-resort-terrasse-1.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
-                  </div>
-                  <div class="carousel-item active">
-                    <%=image_tag("Chambre-HD.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
                   </div>
                   <div class="carousel-item">
                     <%=image_tag("salle-bain.webp", :class => "d-block w-100", :style => " height: 28em; width: 100%; object-fit: cover;", :alt => 'vibes resort résidence cap agde')%>
