--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
   <header id="header">
     <div class="bs-example">
         <nav class="navbar navbar-expand-md navbar-light bg-white">
-          <%= link_to image_tag( 'vibes-resort-logo2.png'), root_path%>
+          <%= image_tag 'vibes-resort-logo22.png', style:"width:15%; margin-top:2em;"%>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -77,7 +77,7 @@
         </nav>
 
         <div class="bandeau pb-3 pt-3">
-        <p class="p-bandeau"> Devenez propriétaire d’un logement dans une résidence de tourisme de luxe et investissez au sein du plus grand village naturiste d’Europe. </p>
+        <p class="p-bandeau color-primary"> Devenez propriétaire d’un logement dans une résidence de tourisme de luxe et investissez au sein du plus grand village naturiste d’Europe. </p>
         </div>
 
 
