--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -9,7 +9,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(<%= asset_path 'vibes-resort-terrasse-2.webp' %>) ; background-position: center; background-attachment:fixed;">
+          <div class="carousel-item active" style="background-image: url(<%= asset_path 'vibes-resort-1.webp' %>) ; background-position: center; background-attachment:fixed;">
             <div class="carousel-container">
               <div class="carousel-content container">
                 <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase;">Vibes Resort</h2>
@@ -57,7 +57,7 @@ haut standing et un niveau de confort sans pareil.</p>
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(<%= asset_path 'vibes-resort-3.webp' %>); background-position:center; background-attachment:fixed;">
+          <div class="carousel-item" style="background-image: url(<%= asset_path 'vibes-resort-terrasse-2.webp' %>); background-position:center; background-attachment:fixed;">
             <div class="carousel-container">
               <div class="carousel-content container">
                 <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase;">Vibes Resort</h2>
