--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -372,8 +372,8 @@ de la mer et le charme de l’<strong>éternel féminin</strong>. </p>
       <div class="container invest text-center" style="padding-top:6em;" id="proprietaire">
           <h2 class="mb-4 pb-4">Devenir Propriétaire</h2>
 
-          <p class="p-font2">
-            Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
+          <p class="p-font2 my-4 pb-4" style="font-size:20px; text-align:center;">
+            <strong>Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine,<br> avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</strong></p>
 
           <p class="p-font2">
             Nous vous offrons la <strong>possibilité d’acquérir une chambre
