--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
   <header id="header">
     <div class="bs-example">
         <nav class="navbar navbar-expand-md navbar-light bg-white">
-          <%= image_tag 'vibes-resort-logo22.png', style:"width:15%; margin-top:2em;"%>
+          <%= image_tag 'vibes-resort-logo22.png', style:"width:15%; padding-top:3em;"%>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -77,7 +77,7 @@
         </nav>
 
         <div class="bandeau pb-3 pt-3">
-        <p class="p-bandeau color-primary"> Devenez propriétaire d’un logement dans une résidence de tourisme de luxe et investissez au sein du plus grand village naturiste d’Europe. </p>
+        <p class="p-bandeau color-primary "><strong> Devenez propriétaire</strong> d’un logement dans une résidence de tourisme de luxe<br> et <strong>investissez</strong> au sein du plus grand village naturiste d’Europe. </p>
         </div>
 
 
@@ -98,13 +98,13 @@
 
     <div class="container">
       <div class="copyright">
-        Tous droits réservés – <strong>SCCV VIBES RESORT</strong> – 790 452 452 RCS Béziers -  – Une opération portée par le Groupe Immobilier ANGELOTTI
+        Tous droits réservés – <strong>SCCV VIBES RESORT</strong> – 790 452 452 RCS Béziers -  – Une opération commercialisée par le <a href="">Groupe Immobilier ANGELOTTI</a>
       </div>
       <div class="credits">
         Illustrations à caractère d’ambiance © A+ Architecture, Golem Images, We Love Design, Atypik Studio – Photos © Shutterstock
       </div>
       <div class="credits-2">
-        Rentabilité donnée à titre indicatif et sous conditions. La location sous le régime de la parahôtellerie nécessite la mise en œuvre d’au moins trois des prestations suivantes : fourniture du petit-déjeuner, nettoyage régulier des locaux, fourniture du linge de maison, réception de la clientèle. Elle permet la récupération intégrale de la TVA (20%) payée lors de l’acquisition du bien, sous condition d’engagement de location. Comme tout investissement, investi r dans l’immobilier peut présenter des risques – Tarifs indiqués TTC, incluant une TVA récupérable de 20%, dans la limite des stocks disponibles.
+        Rentabilité donnée à titre indicatif et sous conditions. La location sous le régime de la parahôtellerie nécessite la mise en œuvre d’au moins trois des prestations suivantes : fourniture du petit-déjeuner, nettoyage régulier des locaux, fourniture du linge de maison, réception de la clientèle. Elle permet la récupération intégrale de la TVA (20%) payée lors de l’acquisition du bien, sous condition d’engagement de location. Comme tout investissement, investir dans l’immobilier peut présenter des risques – Tarifs indiqués TTC, incluant une TVA récupérable de 20%, dans la limite des stocks disponibles.
       </div>
       <div class="credits">
         <% if user_signed_in?%>
