--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -544,7 +544,7 @@
                                 <div class="container">
                                   <div class="row justify-content-center">
                                     <div class="col-lg-12 col-md-12">
-                                      <div class="count-down-wrapper" style="background-color:#10384E;">
+                                      <div class="count-down-wrapper" style="background-color:#10384E; border-radius : 0 24px 0 24px ;">
                                         <div class="row justify-content-between">
                                           <div class="col-lg-3 col-md-6 col-sm-6">
                                             <!-- Counter Up -->
