--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
 
     <div class="container">
       <div class="copyright">
-        Tous droits réservés – <strong>SCCV VIBES RESORT</strong> – 790 452 452 RCS Béziers -  – Une opération commercialisée par le <a href="">Groupe Immobilier ANGELOTTI</a>
+        Tous droits réservés – <strong>SCCV VIBES RESORT</strong> – 790 452 452 RCS Béziers - Une opération commercialisée par le <a href="https://www.angelotti.fr/">Groupe Immobilier ANGELOTTI</a>
       </div>
       <div class="credits">
         Illustrations à caractère d’ambiance © A+ Architecture, Golem Images, We Love Design, Atypik Studio – Photos © Shutterstock
