--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -12,7 +12,7 @@
         <div class="carousel-item active" style="background-image: url(<%= asset_path 'vibes-resort-terrasse-2.webp' %>) ; background-position: center; ">
           <div class="carousel-container">
             <div class="carousel-content container">
-              <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase;">Vibes Resort</h2>
+              <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase; margin-top:-2em;">Vibes Resort</h2>
 
               <% flash.each do |type, msg| %>
               <div class="alert alert-info margin-top:100px;" style="z-index:1">
@@ -20,7 +20,7 @@
               </div>
               <% end %>
 
-              <p style="font-size:20px; text-transform: uppercase;">Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
+              <p style="font-size:24px; text-transform: uppercase; font-weight:600;">Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
                 à la fois intime et convivial, avec des équipements de
                 haut standing et un niveau de confort sans pareil.</p>
 
@@ -32,64 +32,8 @@
             </div>
           </div>
 
-          <!-- Slide 2 -->
-          <div class="carousel-item" style="background-image: url(<%= asset_path 'vibes-resort-1.webp' %>) ; background-position: top;">
-            <div class="carousel-container">
-              <div class="carousel-content container">
-                <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase;">Vibes Resort</h2>
-
-                <% flash.each do |type, msg| %>
-                <div class="alert alert-info margin-top:100px;" style="z-index:1">
-                  <%= msg %>
-                </div>
-                <% end %>
-
-                <p style="font-size:18px; text-transform: uppercase;" >Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
-                  à la fois intime et convivial, avec des équipements de
-                  haut standing et un niveau de confort sans pareil.</p>
-
-                  <p style="font-size:18px; text-transform: uppercase;"> Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
-
-                  <%= link_to "Nous contacter", root_path(anchor: 'contact'), class: "btn-get-started " %>
-                  <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers " %>
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 3 -->
-            <div class="carousel-item" style="background-image: url(<%= asset_path 'vibes-resort-2.webp' %>); background-position:center;">
-              <div class="carousel-container">
-                <div class="carousel-content container">
-                  <h2 class="animate__animated animate__fadeInDown" style="text-transform: uppercase;">Vibes Resort</h2>
-
-                  <% flash.each do |type, msg| %>
-                  <div class="alert alert-info margin-top:100px;" style="z-index:1">
-                    <%= msg %>
-                  </div>
-                  <% end %>
-
-                  <p style="font-size:18px; text-transform: uppercase;" >Vibes Resort, nouvelle résidence au Cap d'Agde, est né de l’idée d’offrir un lieu d’exception
-                    à la fois intime et convivial, avec des équipements de
-                    haut standing et un niveau de confort sans pareil.</p>
-
-                    <p style="font-size:18px; text-transform: uppercase;"> Cette résidence de tourisme de luxe est idéale pour valoriser votre patrimoine, avec une rentabilité prévisionnelle entre 5 et 6 % et la récupération possible de la TVA*.</p>
-
-                    <%= link_to "Nous contacter", root_path(anchor: 'contact'), class: "btn-get-started" %>
-                    <%= link_to "Télécharger la plaquette", new_plaquette_path, class: "btn-invers" %>
-                  </div>
-                </div>
-              </div>
 
             </div>
-
-            <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
-              <i class="fas fa-chevron-left fa-2x" class="carousel-control-next-icon icofont-rounded-left" aria-hidden="true"></i>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
-              <i class="fas fa-chevron-right fa-2x" class="carousel-control-next-icon icofont-rounded-right" aria-hidden="true"></i>
-              <span class="sr-only">Next</span>
-            </a>
 
           </div>
         </div>
@@ -470,7 +414,7 @@
                                   <div class="row align-items-end">
 
                                     <div class="col-xl-4 col-lg-4 col-md-6">
-                                      <div class="single-card text-center mb-30">
+                                      <div class="single-card active text-center mb-30">
                                         <div class="card-top">
                                           <span class="flaticon-chart"></span>
                                           <h4>Chambre T1</h4>
@@ -488,7 +432,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-lg-4 col-md-6">
-                                      <div class="single-card active text-center mb-30">
+                                      <div class="single-card  text-center mb-30">
                                         <div class="card-top">
                                           <span class="flaticon-project"></span>
                                           <h4>Logements T3</h4>
@@ -599,6 +543,8 @@
 
                                     <p class="p-font4 mb-4 pb-4">
                                       *Rentabilité donnée à titre indicatif et sous conditions. La location sous le régime de la parahôtellerie nécessite la mise en œuvre d’au moins trois des prestations suivantes : fourniture du petit-déjeuner, nettoyage régulier des locaux, fourniture du linge de maison, réception de la clientèle. Elle permet la récupération intégrale de la TVA (20%) payée lors de l’acquisition du bien, sous condition d’engagement de location. Comme tout investissement, investir dans l’immobilier peut présenter des risques.
+                                      <br><br>
+                                      **Prix TTC, incluant une TVA récupérable de 20%. Dans la limite des stocks disponibles.
                                     </P>
 
 
