--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -195,17 +195,17 @@
       <!-- Gallery-2 img Start-->
       <div class="gallery-area2 fix" >
         <div class="row">
-          <div class="gallery-img col-3">
-            <a href="#"><%=image_tag("village-naturiste-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%></a>
+          <div class="gallery-img col-sm-6 col-lg-3">
+            <%=image_tag("village-naturiste-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%>
           </div>
-          <div class="gallery-img col-3">
-            <a href="#"><%=image_tag("port-cap-agde2.webp", style:"width:100%; height:auto; object-fit:cover;")%></a>
+          <div class="gallery-img col-sm-6 col-lg-3">
+            <%=image_tag("port-cap-agde2.webp", style:"width:100%; height:auto; object-fit:cover;")%>
           </div>
-          <div class="gallery-img col-3">
-            <a href="#"><%=image_tag("plage-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%></a>
+          <div class="gallery-img col-sm-6 col-lg-3">
+            <%=image_tag("plage-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%>
           </div>
-          <div class="gallery-img col-3">
-            <a href="#"><%=image_tag("port-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%></a>
+          <div class="gallery-img col-sm-6 col-lg-3">
+            <%=image_tag("port-cap-agde.webp", style:"width:100%; height:auto; object-fit:cover;")%>
           </div>
         </div>
       </div>
@@ -239,7 +239,7 @@
 
 
 
-<div class="row pt-4  pb-4  jumbotron" id="rooftop">
+<!--<div class="row pt-4  pb-4  jumbotron" id="rooftop">
 
   <div class="col-sx-12 col-sm-12 col-lg-6 col-md-6 pb-4">
 
@@ -297,14 +297,17 @@
 
     </div>
 
-  </div>
+  </div>-->
 
 
-<div class="row " style="padding:2em;" id="appartements">
+<div class="row " style="padding:2em; display:flex; align-items:center; justify-content:center;" id="appartements">
 
-  <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6 pt-4 mt-4 pb-4 mb-4">
+  <div class="col-xs-12 col-sm-12 col-lg-3 col-md-6 pt-4 mt-4 pb-4 mb-4 mr-4 pr-4">
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+    <h2 style="font-size:42px; text-align:right;"> Les <br> Appartements</h2>
+
+  <!--  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -350,32 +353,91 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div>-->
 
   </div>
 
 
-<div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-lg-5 col-md-6">
 
-  <div class="container text-center  mx-auto archi2 "  data-aos="fade-up" data-aos-delay="100">
-    <h2 class="mb-4 pb-4"> Les Appartements </h2>
+          <div class="container text-center  mx-auto archi2 "  data-aos="fade-up" data-aos-delay="100">
+          <!--  <h2 class="mb-4 pb-4"> Les Appartements </h2>-->
 
-    <p class="p-font2"> Rejoignez vos <strong>appartements privés et profitez
-      d’un confort de grand standing</strong>, que l’on a aussi
-      plaisir à faire partager. Des <strong>chambres T1 aux
-        suites 4 pièces</strong>, les <strong>appartements de Vibes Resort</strong>
-        ont ce petit quelque chose en plus qui les rend
-        tellement irrésistibles. </p>
+            <p class="p-font2"> Rejoignez vos <strong>appartements privés et profitez
+              d’un confort de grand standing</strong>, que l’on a aussi
+              plaisir à faire partager. Des <strong>chambres T1 aux
+                suites 4 pièces</strong>, les <strong>appartements de Vibes Resort</strong>
+                ont ce petit quelque chose en plus qui les rend
+                tellement irrésistibles. </p>
 
-        <p class="p-font2">Décoration et mobilier
-          design, ambiance feutrée, spacieux volumes,
-          stationnements privatifs sécurisés ; ici, tout est
-          dédié à votre <strong>bien-être</strong>. </p>
+                <p class="p-font2">Décoration et mobilier
+                  design, ambiance feutrée, spacieux volumes,
+                  stationnements privatifs sécurisés ; ici, tout est
+                  dédié à votre <strong>bien-être</strong>. </p>
+
+          </div>
 
         </div>
 
+
+
+        <div class="col-xs-12 col-sm-12 col-lg-5 col-md-6">
+
+          <div class="container text-center  mx-auto archi2 "  data-aos="fade-up" data-aos-delay="100">
+          <!--  <h2 class="mb-4 pb-4"> Les Appartements </h2>-->
+
+            <p class="p-font2">À l’intérieur de la résidence, c’est le domaine privé
+              du luxe et de l’hédonisme. Avec vue panoramique sur
+              le <strong>village naturiste, Port Ambonne et la Méditerranée</strong>,
+              le rooftop de <strong>Vibes Resort est une île privée</strong>, où
+              le temps qui passe se déguste avec raffinement.
+            </p>
+
+            <p class="p-font2"> Appréciez un cocktail dans la piscine, profitez des spas à débordement ou du bar lounge, prélassez-vous sur la large plage en bois, à l’ombre des palmiers… <strong>et
+              c’est toute la douceur du Sud qui s’offre à vous</strong>.</p>
+
+            </div>
+
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-lg-3 col-md-6 pt-4 pb-4 mb-4 ml-4 pl-4">
+
+
+          <h2 style="font-size:42px; text-align:left;"> Le <br> Rooftop</h2>
+
+
+
+        </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Gallery-2 img Start-->
+    <div class="gallery-area2 fix mb-4 pb-4" >
+      <div class="row" style="justify-content:center;">
+        <div class="gallery-img col-sm-6 col-lg-4 mb-4">
+          <a href="#"><%=image_tag("vibes-resort-appartement-2.webp", style:"width:100%; height:20em; object-fit:cover;")%></a>
+        </div>
+        <div class="gallery-img col-sm-6 col-lg-6 mb-4">
+          <a href="#"><%=image_tag("vibes-resort-terrasse-1.webp", style:"width:100%; height:20em; object-fit:cover;")%></a>
+        </div>
+        <div class="gallery-img col-sm-6 col-lg-6 mt-2">
+          <a href="#"><%=image_tag("vibes-resort-appartement-1.webp", style:"width:100%; height:20em; object-fit:cover;")%></a>
+        </div>
+        <div class="gallery-img col-sm-6 col-lg-4 mt-2 mb-4">
+          <a href="#"><%=image_tag("vibes-resort-chambre2.webp", style:"width:100%; height:20em; object-fit:cover;")%></a>
+        </div>
       </div>
     </div>
+    <!-- Gallery-2 img End-->
 
 
                                   <!--
@@ -465,7 +527,7 @@
           </div>
           <div class="card-bottom">
             <ul>
-              <li><i class="fas fa-check"></i>Chambres de 28 à 51 m2</li>
+              <li><i class="fas fa-check"></i>Chambres de 28 à 51 m<sup>2</sup></li>
               <li><i class="fas fa-check"></i>A partir de 285 600 € TTC**</li>
             </ul>
           </div>
@@ -483,7 +545,7 @@
           </div>
           <div class="card-bottom">
             <ul>
-              <li><i class="fas fa-check"></i>Logements de 66 m2</li>
+              <li><i class="fas fa-check"></i>Logements de 66 m<sup>2</sup></li>
               <li><i class="fas fa-check"></i>A partir de 644 000 € TTC**</li>
             </ul>
           </div>
@@ -501,7 +563,7 @@
           </div>
           <div class="card-bottom">
             <ul>
-              <li><i class="fas fa-check"></i>Suites duplex de 48 à 139 m2</li>
+              <li><i class="fas fa-check"></i>Suites duplex de 48 à 139 m<sup>2</sup></li>
               <li><i class="fas fa-check"></i>A partir de 708 000 € TTC**</li>
             </ul>
           </div>
